lib/bait/tests/inout_error/struct/field_is_immutable.out
lib/bait/tests/inout_error/struct/field_is_immutable.in.bt:14:5 error: field `bait.tests.packages.struct_mod.Foo.c` is immutable
lib/bait/tests/inout_error/struct/field_is_immutable.in.bt:15:5 error: field `bait.tests.packages.struct_mod.Foo.d` is immutable
lib/bait/tests/inout_error/struct/field_is_immutable.in.bt:18:5 error: field `Spam.a` is immutable
lib/bait/tests/inout_error/struct/field_is_immutable.in.bt:20:5 error: field `Spam.c` is immutable
